# portfolio

./: .gitignore  README.md
backend/: README.md  cache.json  pyproject.toml
backend/app/: cache.py  helper.py  main.py
backend/setup/: portfolio.json  setup_db.py
backend/tests/: test_helper.py  test_main.py  test_portfolio.py  test_returns.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  setupTests.js
frontend/src/components/: Dropdown.js  Table.js
frontend/src/components/chart/: DoughnutChart.js  LineChart.js
frontend/src/layout/: AppContent.js  AppFooter.js  AppHeader.js
frontend/src/tests/: App.test.js  DoughnutChart.test.js  Dropdown.test.js  LineChart.test.js  Table.test.js  mockData.json
infrastructure/: README.md  main.tf  provider.tf  variables.tf
