[project]
name = "backend"
version = "0.1.0"
description = "FastAPI Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.6",
    "fastapi[standard]>=0.115.12",
    "pandas>=2.2.3",
    "yfinance>=0.2.57",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.11.7",
]
test = [
    "pytest>=8.3.5",
]
